--- a/contact.html
+++ b/contact.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact - Feel Yourself Silent Disco</title>
     <link rel="stylesheet" href="./resources/css/styles.css">
+    <link rel="icon" type="image/x-icon" href="./resources/img/favicon.png">
     <script src="https://kit.fontawesome.com/91bc635fff.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
-        <button class="hamburgerbutton">
+        <button class="hamburgerbutton" onclick="lockScroll();">
             <i class="fa-solid fa-bars"></i>
         </button>
 
@@ -20,7 +21,7 @@
 
 
         <nav class="menu">
-            <button class="xbutton">
+            <button class="xbutton" onclick="lockScroll();">
                 <i class="fa-solid fa-x"></i>
             </button>
             
